public/assets/css/components/style.default.css
/* ... */
.emptyChartContainer {
    min-height: 290px;
    text-align: center;
    padding-top: 75px;
}

input.small {
    width: 30px;
    margin-bottom: 2px;
}

/* Helpers */
.inline {
    display: inline-block;
}

.align-right {
    text-align: right;
}

.align-center {
    text-align: center;
}

.right {
    float: right;
}

.moveable.right,
.ticketBox.right {
    float: none;
}

.StripeElement {
    background-color: white;
    line-height: 20px;
    height: 30px;
    padding: 6px 6px;
    border: 1px solid #cccccc;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.StripeElement#card-expiry {
    width: 100px;
    float: left;
}

.StripeElement#card-cvc {
    width: 100px;
    float: right;
}

.StripeElement iframe {
    position: absolute;
}

.StripeElement--focus {
    box-shadow: 0 1px 3px 0 #cfd7df;
}

.StripeElement--invalid {
    border-color: var(--red);
}

.StripeElement--webkit-autofill {
    background-color: #fefde5 !important;
}





body::after {
    opacity: 0;
}



.padding-md {
    padding: 15px;
}

.padding-lg {
    padding: 30px;
}

.onboarding img {
    box-shadow: var(--regular-shadow);
    margin: 15px 0px;
    border: 1px solid #ccc;
}

.bigIcon {
    font-size: 40px;
}

.currentSprint select,
.mainSprintSelector {
    max-width: 220px;
}

.tooltip {
    z-index: 1000010;
}

.leftpanel .promotion {
    position: absolute;
    bottom: -20px;
    left: 0px;
    background: #555;
    box-shadow: inset 0px 0px 5px #111;
    color: #f3f4f5;
    padding: 10px 10px;
    margin: 20px 0px;
    border: 1px solid #555;
    width: 100%;
}

.leftpanel .promotion i {
    font-size: 24px;
    float: left;
    margin-right: 10px;
    line-height: 45px;
}

.leftpanel .promotion a {
    color: #f3f4f5;
}

.widgettitle .editHeadline {
    float: right;
    margin-right: -5px;
    color: #aaa;
    width: 24px;
    line-height: 20px;
    text-align: center;
    padding-top: 1px;
    border-radius: 5px;
}

body .widgettitle .editHeadline:hover {
    color: var(--accent1);
    background: var(--col-hover-bg);
}

.mce-window {
    z-index: 1000005 !important;
}

.popover-content {
    min-width: 150px;
}

.showDialogOnLoad {
}





.svgContainer {
    margin:auto;
    max-width:200px;
    margin-bottom:20px;
}

.svgContainer svg {
    max-width: 100%;
    height: auto;
}

.svgContainer.fixedHeight svg {
    width:auto;
    height:100px;
}

.loading {
    width:100%;
    text-align:center;
    background:url(../../images/svg/loading-animation.svg) center center no-repeat;
    min-height:31px;
    background-size:31px 31px;
    display:none;
}

.border-bottom {
    border-bottom:1px solid var(--neutral);
    padding-bottom:5px;
    margin-bottom:10px;
}

.border-top {
    border-top:1px solid var(--neutral);
    padding-top:5px;
    margin-top:5px;
}

.commentMain {
    width:calc(100% - 50px);
    margin-bottom:10px;
    float:left;
}

.commentContent {
    background:var(--layered-background);
    border: 1px solid var(--main-border-color);
    border-radius:var(--box-radius);
    width:100%;
    padding:12px 15px;
    font-size:var(--base-font-size);
}

.commentContent.statusUpdate {
    background:var(--layered-background);
    border: 1px solid var(--main-border-color);
}

.commentContent.statusUpdate h3 {
    margin-bottom:8px;
    font-weight: bold;
}

.commentContent .text {
    text-align:left;
    margin: 0;
}

.ticket-due-date {
    font-weight: 600;
}

.ticket-due-date--overdue {
    color: var(--dark-red) !important;
}

.ticket-due-date--soon {
    color: var(--yellow) !important;
}

#mainToggler {
    margin-bottom:15px;
    display:block;
}

.commentContent .name {
    font-weight:bold;
    display:block;
    margin-bottom:5px;
}

.commentContent .commentDate {
    font-size:var(--font-size-s);
}

.commentImage {
    margin-top:0px;
    float:left;
    margin-right:10px;

}

.commentImage img {
    border-radius:50%;
    width:38px;
    height:38px;
    border:1px solid var(--main-border-color);
    background:var(--secondary-background);
}
.commentLinks {

}

.commentLinks a {
    display:inline-block;
    margin-right:10px;
    margin-bottom:10px;
    font-size:var(--font-size-s);
}

.commentMain .replies {
    padding-left:10px;
}

.commentMain .replies .commentMain{
    margin-bottom:0px;
}

.commentMain .replies .commentMain:last-child {
    margin-bottom:0px;
}

.commentReply {
    width:calc(100% - 50px);
    float:left;
}

.commentReply input[type="submit"] {
    margin-top:10px;
    margin-bottom:20px;
}

.commentReply input[type="button"] {
    margin-top:10px;
    margin-bottom:20px;
}


.sortHandle {
    font-size:16px;
    color:#ccc;
    padding-left:15px;
}

.ui-tabs-panel {
    padding:15px 0px;
}

.articleWrapper {
    max-width:980px;
    margin:auto;
    text-align:left;
}

.articleHeadline {
    font-size:var(--font-size-xxxl);
    margin-bottom:10px;
}

.articleHeadline .far {

}

.articleMeta {
    font-style: italic;
    margin-bottom:25px;
}

.articleMeta .metaContent {
    opacity:0.7;
}

.articleMeta .tagsinput.readonly {
    width:auto !important;
    height:auto !important;
    margin: 0px 0px;
    vertical-align: middle;
    color:var(--primary-font-color);
    opacity:0.7;
}

.articleMeta div.tagsinput.readonly span.tag {
    margin:0px 5px;
    margin-left:0px;
    padding:0px;
    background:none;
    color:var(--primary-font-color);
    opacity:0.7;
}

.articleBody {
    margin-bottom:25px;
}

.teamBox {
    padding-top:15px;
}

.profileBox {
    border-radius: var(--box-radius);
    text-align:center;
    margin-bottom: 20px;
    padding:10px;
    margin-top:20px;
    background: var(--kanban-card-bg);
}


.profileBox .commentImage {
    float:none;
    margin:0px;
    margin-top:-35px;
    margin-bottom:10px;
}

.profileBox .commentImage img {
    width:50px;
    height:50px;
    border-radius:50px;
}
/* ... */

